creating canvas and snake

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <h1>snake game</h1>
+
+    <canvas class="canvas" width="500" height="500"></canvas>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
